# Kaggle

./: .env.example  .gitignore  AGENTS.md  BUILD_PROGRESS.md  COORDINATION.md  DATA.md  JULES_SETUP.md  README.md  ROADMAP.md  RUNBOOK.md  _auto-rescue.patch  _build_corpus_lite.py  _build_cot_v5_local.py  _build_cot_v6.py  _build_nb.py  _c1.json  _c11.json  _c12.json  _c15.json  _c16.json  _c17.json  _c18.json  _c1b.json  _c2.json  _c23.json  _c24.json  _c3.json  _c4.json  _c5.json  _c7.json  _clean.json  _demo_fork.json  _deploy_excel.py  _deploy_gaps.py  _deploy_research.py  _deploy_roadmap.py  _e007_latest.patch  _excel.json  _gaps.json  _inject.py  (+56 more)
orchestrator/: __init__.py  config.py  dashboard.py  dispatcher.py  dryrun.py  git_ops.py  github_ops.py  jules_client.py  jules_pool.py  kaggle_client.py  locks.py  loop.py  operator.py  packaging.py  selector.py  state.py  status.py  submit_gate.py  tools.py
prompts/: jules_deep_worker.md  jules_worker.md  operator_routine.md  operator_system.md  operator_tick.md
research-jules-orchestration/: 00_research_plan.md  01_pre_registration.md  02_findings_log.md  03_assumption_log.md  04_open_questions.md  05_contradictions.md  06_source_log.md  07_glossary.md  08_progress_snapshots.md  09_meta_log.md  10_steelman.md  BUILD_RALPH_PROMPT.md  CONTINUOUS_OPS_PLAN.md  EXPERIMENTATION_PLAN.md  INDEX.md  REPORT.md  initial_backlog.md
scripts/: audit_seed_tasks.py
state/: _decision_cron1.json  _decision_cron1b.json  dashboard.xlsx  events.jsonl  live_notebook_v42.json  live_notebook_v43_patched.json  locks.json  run_log.jsonl  (+1 more)
(+625 files in other folders)
