[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-jules-orchestrator"
version = "0.1.0"
description = "Autonomous Kaggle-competition loop: Jules worker x Claude operator x local orchestrator"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "jsonschema>=4.21", "openpyxl>=3.1"]

[tool.setuptools]
packages = ["orchestrator", "orchestrator.executors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
